add nacigation page

--- a/前端/introduce.html
+++ b/前端/introduce.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>测试3</title>
+  <title>校园帮导航页</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">  <!-- Google web font "Open Sans" -->
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -65,7 +65,7 @@
         }
 
             #slider1 > ul > li:nth-of-type(3) {
-                background: url(./images/04.jpg);
+                background: url(./img/04.jpg);
             }
 
             #slider1 > input:nth-of-type(3):checked ~ ul #bg {
@@ -110,7 +110,7 @@
             height: 100%;
             width: 100%;
             z-index: -1;
-            background: url(./images/04.jpg) 1px 23%;
+            background: url(./img/04.jpg) 1px 23%;
             -webkit-filter: blur(7px);
         }
 
@@ -162,7 +162,7 @@
                 <input type="radio" name="slides" id="slides_3" />
                 <input type="radio" name="slides" id="slides_4" />
                 <ul>
-                    <li style="background: url(./images/06.jpg)">
+                    <li style="background: url(./img/06.jpg)">
                         <h1>校园帮使用指南</h1><br/><br/><br/><br/>
                         <font size="5">
                             <p style="font-weight: bold;text-indent: 2em;">在大学，您是否还在为三缺一的尴尬而纠结!？</p>
@@ -182,7 +182,7 @@
                         </font>
                         
                     </li>
-                    <li style="background: url(./images/08.jpg)">
+                    <li style="background: url(./img/08.jpg)">
                         <br/><br/><br/><br/>
                         <font size="7">
                             <p style="font-weight: bold;text-indent: 2em;">校园帮</p>
