--- a/前端/introduce.html
+++ b/前端/introduce.html
@@ -160,8 +160,8 @@
 
             <div style="width: 100%;height: 40px">
                 <div class="but2">
-                    <a href="https://www.baidu.com/"><button class="button2" style="margin-left: 85%">登录</button></a>
-                    <a href="https://www.baidu.com/"><button class="button2" style="margin-left: 15px;">注册</button></a>
+                    <a href="login.html"><button class="button2" style="margin-left: 85%">登录</button></a>
+                    <a href="register.html"><button class="button2" style="margin-left: 15px;">注册</button></a>
                 </div>
             </div>
             
@@ -237,7 +237,7 @@
                 </div>
             </div>
             <div class="but">
-                <a href="https://www.baidu.com/"><button class="button">开始使用校园帮</button></a>
+                <a href="login.html"><button class="button">开始使用校园帮</button></a>
             </div>
         </div>
             
